# ReMoLON

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  frontendServerConfig.cfg  remolonClientConfig.cfg
ReMoLON/: CMakeLists.txt
ReMoLON/include/: Node.h  SessionManager.h  StreamingSession.h
ReMoLON/include/frontendclientpackets/: CloseSessionResult.h  NodeInfo.h  StartStreamingSessionResult.h
ReMoLON/include/frontendserverpackets/: RequestCloseUserSession.h  RequestNodeInfo.h  RequestStartStreamingSession.h
ReMoLON/include/remotooclientpackets/: AllowAddressAnswer.h  SessionInfo.h
ReMoLON/include/remotooserverpackets/: RequestAllowAddress.h  RequestFinishSession.h  RequestSessionInfo.h
ReMoLON/src/: Node.cpp  SessionManager.cpp  StreamingSession.cpp  main.cpp
ReMoLON/src/frontendclientpackets/: CloseSessionResult.cpp  NodeInfo.cpp  StartStreamingSessionResult.cpp
ReMoLON/src/frontendserverpackets/: RequestCloseUserSession.cpp  RequestNodeInfo.cpp  RequestStartStreamingSession.cpp
ReMoLON/src/remotooclientpackets/: AllowAddressAnswer.cpp  SessionInfo.cpp
ReMoLON/src/remotooserverpackets/: RequestAllowAddress.cpp  RequestFinishSession.cpp  RequestSessionInfo.cpp
ReMoLON_FrontEnd/: CMakeLists.txt
ReMoLON_FrontEnd/include/: AbstractActionHandler.h  RequestManager.h  SessionManagerServer.h  SessionTracker.h  User.h  UserManager.h  VisualizationNode.h  VisualizationNodeManager.h  WebServer.h  WebServerRequestHandler.h  XmlBuilder.h
ReMoLON_FrontEnd/include/clientpackets/: CloseSessionResult.h  NodeInfo.h  StartStreamingSessionResult.h
ReMoLON_FrontEnd/include/httpactions/: CreateSessionActionHandler.h  DefaultActionHandler.h  DestroySessionActionHandler.h  LogInActionHandler.h  SessionListActionHandler.h
ReMoLON_FrontEnd/include/serverpackets/: RequestCloseUserSession.h  RequestNodeInfo.h  RequestStartStreamingSession.h
ReMoLON_FrontEnd/src/: RequestManager.cpp  SessionManagerServer.cpp  SessionTracker.cpp  User.cpp  UserManager.cpp  VisualizationNode.cpp  VisualizationNodeManager.cpp  WebServer.cpp  WebServerRequestHandler.cpp  XmlBuilder.cpp  main.cpp
ReMoLON_FrontEnd/src/clientpackets/: CloseSessionResult.cpp  NodeInfo.cpp  StartStreamingSessionResult.cpp
ReMoLON_FrontEnd/src/httpactions/: CreateSessionActionHandler.cpp  DefaultActionHandler.cpp  DestroySessionActionHandler.cpp  LogInActionHandler.cpp  SessionListActionHandler.cpp
ReMoLON_FrontEnd/src/serverpackets/: RequestCloseUserSession.cpp  RequestNodeInfo.cpp  RequestStartStreamingSession.cpp
ReMoLON_Util/: ByteBuffer.h  CMakeLists.txt  Config.h  PacketHandler.h  Runnable.h  Server.h
ReMoLON_Util/include/ReMoLON_Util/: ByteBuffer.h  Client.h  Config.h  Connection.h  Packet.h  PacketHandler.h  Runnable.h  SecureClient.h  SecureServer.h  SelectorThread.h  Server.h  ThreadPool.h
ReMoLON_Util/src/: ByteBuffer.cpp  Client.cpp  Config.cpp  Connection.cpp  Packet.cpp  PacketHandler.cpp  SecureClient.cpp  SecureServer.cpp  SelectorThread.cpp  Server.cpp
ReMoLON_xinitrc_writter/: CMakeLists.txt
ReMoLON_xinitrc_writter/src/: main.cpp
client/: auth.html  index.html
cmake/: remolonutil-config.cmake.in
include/: AbstractActionHandler.h  CreateSessionActionHandler.h  DefaultActionHandler.h  InstanceManager.h  InstanceServer.h  LogInActionHandler.h  RequestManager.h  SessionListActionHandler.h  UserManager.h  WebServer.h  WebServerRequestHandler.h  XMLBuilder.h
src/: CreateSessionActionHandler.cpp  DefaultActionHandler.cpp  InstanceManager.cpp  InstanceServer.cpp  LogInActionHandler.cpp  RequestManager.cpp  SessionListActionHandler.cpp  UserManager.cpp  WebServer.cpp  WebServerRequestHandler.cpp  XMLBuilder.cpp  main.cpp
